<resources>
    <string name="app_name">Medic</string>
    <string name="User_id">UserID :-</string>
    <string name="User_id_hint">Enter your username</string>
    <string name="password">Password :-</string>
    <string name="password_hint">Enter your Password</string>
    <string name="login">Login</string>
    <string name="new_patient">New Pateint :-</string>
    <string name="schedule">Schedule :-</string>
    <string name="current_patient">Current Patient :-</string>
    <string name="Payment">Payment :-</string>
    <string name="click_here">Click here</string>
    <string name="mobile_no">Mobile No:-</string>
    <string name="mobile_no_hint">Enter Mobile no....</string>
    <string name="register">Register</string>
    <string name="name_hint">Name....</string>
    <string name="name">Name :-</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to Medic</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="receptionist">Receptionist</string>
    <string name="chemist">Chemist</string>
    <string name="pharmacist">Pharmacist</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="chat">Chat</string>
    <string name="doc_id">Doc ID:-</string>
    <string name="qr_code_scanner">QR CODE SCANNER</string>
    <string name="med">Med</string>
    <string name="xyz">XYZ</string>
    <string name="patientid">PatientID :-</string>
    <string name="enter_your_unique_id">Enter your unique id</string>
    <string name="newb">New</string>
    <string name="old">Old</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="button">Button</string>
    <string name="verify">Verify</string>
</resources>
