<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_doctor"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/doctor" />
        <item
            android:id="@+id/nav_patient"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/patient" />
        <item
            android:id="@+id/nav_receptionist"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/receptionist" />
        <item
            android:id="@+id/nav_pharmacist"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/pharmacist" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/chat" />
        </menu>
    </item>


</menu>