<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientRegistration">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="136dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:text="@string/mobile_no"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:background="#48CC92"
        android:onClick="registerHere"
        android:text="@string/register"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileIDText" />

    <EditText
        android:id="@+id/mobileIDText"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mobile_no_hint"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="136dp"
        android:layout_height="49dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="140dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        tools:targetApi="o" />

</android.support.constraint.ConstraintLayout>