<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="77dp"
        android:padding="5dp"
        android:text="@string/new_patient"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newPatient"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:background="#48CC92"
        android:onClick="registrationFunction"
        android:text="@string/click_here"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="77dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="26dp"
        android:padding="5dp"
        android:text="@string/schedule"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/scheduleButton"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:background="#48CC92"
        android:onClick="scheduleFunction"
        android:text="@string/click_here"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="142dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="26dp"
        android:padding="5dp"
        android:text="@string/current_patient"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/currentPatient"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:background="#48CC92"
        android:onClick="currentPatientFunction"
        android:text="@string/click_here"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/scheduleButton"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="26dp"
        android:padding="5dp"
        android:text="@string/Payment"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/payementButton"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:background="#48CC92"
        android:onClick="paymentFunction"
        android:text="@string/click_here"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/currentPatient"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/currentPatient" />
</android.support.constraint.ConstraintLayout>